dgf::digi gold applied kyc changes, behaviour subject removed

--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold-kyc/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold-kyc/applied-kyc/applied-kyc.component.html
@@ -18,89 +18,19 @@
                         {{role.customer?.panCardNumber ? role.customer?.panCardNumber : 'NA' | uppercase}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="date">
-                    <mat-header-cell *matHeaderCellDef>Date & Time</mat-header-cell>
-                    <mat-cell *matCellDef="let role" class="d-block">
-                        <div class="d-block">{{role.createdAt | date:'mediumDate'}}&nbsp;</div>
-                        <div class="d-block">{{role.createdAt | date:'shortTime'}}&nbsp;</div>
-                    </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="currentProduct">
-                    <mat-header-cell *matHeaderCellDef>Current Product</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.currentKycModuleId == 1">Gold Loan</span>
-                        <span *ngIf="role.currentKycModuleId == 3">Scrap Gold</span>
-                    </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="cceApprovalStatus">
-                    <mat-header-cell *matHeaderCellDef>CCE Approval Status</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span class="text-success"
-                            *ngIf="role?.customerKycClassification?.kycStatusFromCce == 'approved'">
-                            {{role?.customerKycClassification?.kycStatusFromCce | titlecase}} </span>
-                        <span *ngIf="role?.customerKycClassification?.kycStatusFromCce == 'pending'">
-                            <span
-                                class="text-warning kt-padding-r-5">{{role?.customerKycClassification?.kycStatusFromCce | titlecase}}</span>
-                            <span *ngIf="role?.customerKycClassification?.reasonFromCce"
-                                class="material-icons custom-icon" mat-raised-button
-                                matTooltip={{role?.customerKycClassification?.reasonFromCce}} matTooltipPosition="above"
-                                matTooltipClass="custom-tooltip-white">
-                                info
-                            </span>
-                        </span>
-                        <span *ngIf="role?.customerKycClassification?.kycStatusFromCce == 'rejected'">
-                            <span
-                                class="text-danger kt-padding-r-5">{{role?.customerKycClassification?.kycStatusFromCce | titlecase}}</span>
-                            <span class="material-icons custom-icon" mat-raised-button
-                                matTooltip={{role?.customerKycClassification?.reasonFromCce}} matTooltipPosition="above"
-                                matTooltipClass="custom-tooltip-white">
-                                info
-                            </span>
-                        </span>
-                        <span
-                            *ngIf="!role?.customerKycClassification?.kycStatusFromCce && role?.customerKycClassification?.kycStatusFromOperationalTeam">-</span>
-                    </mat-cell>
-                </ng-container>
-
                 <ng-container matColumnDef="kycStatus">
                     <mat-header-cell *matHeaderCellDef>KYC Status</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <span class="text-success" *ngIf="role.customer?.kycStatus == 'approved'">
-                            {{role.customer?.kycStatus | titlecase}}
+                        <span class="text-success" *ngIf="role.status == 'approved'">
+                            {{role.status | titlecase}}
                         </span>
-                        <span *ngIf="role.customer?.kycStatus == 'incomplete'">
-                            <span class="text-warning">{{role.customer?.kycStatus | titlecase}}</span>
+                        <span class="text-danger" *ngIf="role.status == 'rejected'">
+                            {{role.status | titlecase}}
+                        </span>
+                        <span *ngIf="role.status == 'pending'">
+                            {{role.status | titlecase}}
+                        </span>
 
-                            <span class="material-icons custom-icon" mat-raised-button
-                                matTooltip={{role?.customerKycClassification?.reasonFromOperationalTeam}}
-                                matTooltipPosition="above" matTooltipClass="custom-tooltip-white">
-                                info
-                            </span>
-                        </span>
-                        <span *ngIf="role.customer?.kycStatus == 'pending'">
-                            <ng-container *ngIf="role?.customerKycClassification?.kycStatusFromCce else blank">
-                                <span class="text-warning kt-padding-r-5">
-                                    {{role.customer?.kycStatus | titlecase}}</span>
-
-                                <span *ngIf="role?.customerKycClassification?.reasonFromOperationalTeam"
-                                    class="material-icons custom-icon" mat-raised-button
-                                    matTooltip={{role?.customerKycClassification?.reasonFromOperationalTeam}}
-                                    matTooltipPosition="above" matTooltipClass="custom-tooltip-white">
-                                    info
-                                </span>
-                            </ng-container>
-                        </span>
-                        <span *ngIf="role.customer?.kycStatus == 'rejected'">
-                            <span class="text-danger kt-padding-r-5">{{role.customer?.kycStatus | titlecase}}</span>
-
-                            <span class="material-icons  custom-icon" mat-raised-button
-                                matTooltip={{role?.customerKycClassification?.reasonFromOperationalTeam}}
-                                matTooltipPosition="above" matTooltipClass="custom-tooltip-white">
-                                info
-                            </span>
-                        </span>
 
                     </mat-cell>
                 </ng-container>
@@ -111,7 +41,7 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div class="kt-pointer" (click)="editKyc(role)" class="kt-pointer">
+                            <div class="kt-pointer" (click)="editKyc(role.customerId)" class="kt-pointer">
                                 <span>
                                     <strong>Action ></strong>
                                 </span>
@@ -122,7 +52,7 @@
 
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef>KYC Details</mat-header-cell>
-                    <mat-cell *matCellDef="let role" (click)="viewKYC(role)" class="kt-pointer view-link">
+                    <mat-cell *matCellDef="let role" (click)="viewKYC(role.customerId)" class="kt-pointer view-link">
                         <div [ngStyle]="{'display': 'inherit'}">
                             View
                         </div>
