--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold-kyc/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold-kyc/applied-kyc/applied-kyc.component.html
@@ -41,9 +41,9 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div class="kt-pointer" (click)="editKyc(role.customerId)" class="kt-pointer">
+                            <div class="kt-pointer" (click)="editKyc(role.customerId, role.id)" class="kt-pointer">
                                 <span>
-                                    <strong>Action ></strong>
+                                    <strong *ngIf="role.status == 'pending'">Action ></strong>
                                 </span>
                             </div>
                         </div>
