--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/registered-customer-request/registered-customer-request.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/registered-customer-request/registered-customer-request.component.html
@@ -8,30 +8,23 @@
                 <ng-container matColumnDef="fullName">
                     <mat-header-cell *matHeaderCellDef>Full Name</mat-header-cell>
                     <mat-cell *matCellDef="let customer">
-                        {{customer.firstName | titlecase}}&nbsp;{{customer.lastName | titlecase}}
+                        {{customer.customer.firstName | titlecase}}&nbsp;{{customer.customer.lastName | titlecase}}
                     </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="mobileNumber">
                     <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
-                    <mat-cell *matCellDef="let customer">{{customer.mobileNumber }}
+                    <mat-cell *matCellDef="let customer">{{customer.customer.mobileNumber }}
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="email">
-                    <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
-                    <mat-cell *matCellDef="let customer">{{customer.email }}
+                <ng-container matColumnDef="state">
+                    <mat-header-cell *matHeaderCellDef>State</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.customer.state.name | titlecase }}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="city">
                     <mat-header-cell *matHeaderCellDef>City</mat-header-cell>
-                    <mat-cell *matCellDef="let customer">{{customer.city | titlecase }}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="source">
-                    <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
-                    <mat-cell *matCellDef="let customer">
-                        <span *ngIf="customer.isFromApp"> Mobile</span>
-                        <span *ngIf="!customer.isFromApp"> Web</span>
+                    <mat-cell *matCellDef="let customer">{{customer.customer.city.name | titlecase }}
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
