withdraw and deposit requests filter

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -467,9 +467,9 @@
                       <label>By Deposit Status</label>
                       <select class="form-control" formControlName="depositStatus">
                         <option value="" selected>Select</option>
-                        <option value="Pending">Pending</option>
-                        <option value="Completed">Completed</option>
-                        <option value="Rejected">Rejected</option>
+                        <option value="pending">Pending</option>
+                        <option value="completed">Completed</option>
+                        <option value="rejected">Rejected</option>
                       </select>
                     </div>                       
                     <div class="col-2 d-flex align-items-end">
@@ -501,9 +501,9 @@
                       <label>By Withdrawal Status</label>
                       <select class="form-control" formControlName="depositStatus">
                         <option value="" selected>Select</option>
-                        <option value="Pending">Pending</option>
-                        <option value="Completed">Completed</option>
-                        <option value="Rejected">Rejected</option>
+                        <option value="pending">Pending</option>
+                        <option value="completed">Completed</option>
+                        <option value="rejected">Rejected</option>
                       </select>
                     </div>                   
                     <div class="col-2 d-flex align-items-end">
